<resources>
    <string name="app_name">HiragaraChangeTest</string>
    <string name="input_guideline">Please input the text you want to change to hiragara.</string>
    <string name="output_guideline">Following is the result.</string>
    <string name="default_input">""</string>
    <string name="default_output">""</string>
    <string name="start_change">Change</string>
    <string name="output_err_general_msg">Change Hiragara happens unknown error!</string>
    <string name="output_err_empty_input_msg">Please input sentence to change!</string>>
</resources>